--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjxLhyzknGy-HJNzJ9r0D0JhNoNGYTzDU&libraries=places&v=weekly"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjxLhyzknGy-HJNzJ9r0D0JhNoNGYTzDU&amp;libraries=places&amp;v=weekly"></script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
